# smt-test

./: .gitignore  Cargo.toml
db1/: 000031.sst  000034.sst  IDENTITY  LOG  LOG.old.1693365439881842  LOG.old.1693365529703072  LOG.old.1693365570703282  LOG.old.1693366064987847  LOG.old.1693366123544182  MANIFEST-000036
src/: cmd.rs  keccak256_hasher.rs  main.rs  test.rs  验证默克尔根.md
